--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -80,7 +80,7 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Manage</th>
-                    <th></th>
+                    <th><a class="ui primary button" href='/createEmail/{{viewEvent.id}}'>Send Mail</a></th>
                 </tr>
                 </thead>
                 <tbody>
