--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -97,7 +97,7 @@
         <a href="/" class="active item">Home</a>
         <a href="/about" class="item">About</a>
         <a ng-show="main.isLoggedIn && main.admin" href="/management" class="item">Management</a>
-        <a ng-show="main.isLoggedIn && main.admin" href="/events" class="item">Events</a>
+        <a ng-show="main.isLoggedIn" href="/events" class="item">Events</a>
         <div class="right item">
         <a ng-show="!main.isLoggedIn" href="/login" class="ui inverted button">Log in</a>
         <a ng-show="!main.isLoggedIn" href="/register" class="ui inverted button">Register</a>
