--- a/public/app/views/pages/events/registerForEvent.html
+++ b/public/app/views/pages/events/registerForEvent.html
@@ -25,8 +25,9 @@
                 </tr>
             </tbody>
 
+
         </table>
-        
+        <h2 class="ui header">{{registerForEvent.user.name}}</h2>
 
 
     <!-- <div class="ui form">
