changed some user schema stuff and the tracking donations of users

--- a/public/app/views/pages/management/management.html
+++ b/public/app/views/pages/management/management.html
@@ -38,7 +38,9 @@
         <tr>
             <th>Name</th>
             <th> Username</th>
-            <th>Email</th> 
+            <th>Email</th>
+            <th>Amount Donated</th>
+            <th>Number Of Donations</th> 
             <th></th>
         </tr>
         </thead>
@@ -47,6 +49,8 @@
                 <td>{{ person.name }}</td>
                 <td>{{ person.username }}</td>
                 <td>{{ person.email }}</td>
+                <td>{{person.totalDonated}}</td>
+                <td>{{person.numberOfDonations}}</td>
                 <td>
                     <a href="/edit/{{person._id}}">
                         <button class="ui yellow basic button">Edit</button> 
