--- a/public/app/views/pages/users/profile.html
+++ b/public/app/views/pages/users/profile.html
@@ -1,19 +1,25 @@
 <div class="ui text">
 	<h1>{{main.username}}'s profile </h1>
 
-	<table class="ui inverted primary table">
+	<table class="ui inverted primary celled table">
 		<thead>
-		  <th><a><i class="edit primary icon"></i></a>&nbsp Name</th>
-	      <th><a href="/editUsername"><i class="edit primary icon"></i></a>&nbsp Username</th>
-	      <th><a><i class="edit primary icon"></i></a>&nbsp Email</th>
-	      <th><a href="/editPassword"><i class="edit primary icon"></i></a>&nbsp Password<th> 
-	    </tr>
-		</thead><tbody>
+			<tr>
+				<th><a><i class="edit primary icon"></i></a>&nbsp Name</th>
+			    <th><a href="/editUsername"><i class="edit primary icon"></i></a>&nbsp Username</th>
+			    <th><a><i class="edit primary icon"></i></a>&nbsp Email</th>
+			    <th><a href="/editPassword"><i class="edit primary icon"></i></a>&nbsp Password</th>
+			    <th>Amount Donated</th> 
+			    <th>Number of Donations</th>
+			</tr>
+		</thead>
+		<tbody>
 			<tr>
 				<td>{{ main.fullname }}</td>
 	    		<td>{{ main.username }}</td>
 	    		<td>{{ main.useremail }}</td>
 	    		<td>***********</td>
+	    		<td>{{ main.totalDonated }}</td>
+	    		<td>{{ main.numberOfDonations }}</td>
 	    	</tr>
 		</tbody>   
 	</table>
