added payment opportunies, before rsvping if the user has not already paid

--- a/public/app/views/pages/events/purchaseTicket.html
+++ b/public/app/views/pages/events/purchaseTicket.html
@@ -1,6 +1,6 @@
 <div class="ui segment">
-    <h2 class="ui header">General Information</h2>
-
+    <h2 class="ui header">{{purchaseTicket.eventId}}</h2>
+    <h3 class="ui header">General information</h3>
     
         <table id="example" class="ui celled inverted primary table" cellspacing="0" width="100%">
             <thead>
