--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -57,6 +57,12 @@
                             <button ng-click="viewEvent.removeUser(person.email);" class="ui red button">Remove</button>
                         </td>
                     </tr>
+                    <!--<tr ng-repeat="guest in viewEvent.rsvpGuests | filter: searchWord | filter: search1 | limitTo: manage.limit">
+                        <td>{{ guest.name }}</td>
+                        <td>{{ guest.number }}</td>
+                        <td>
+                        </td>
+                    </tr>-->
                 </tbody>   
             </table>   
         </div>
