--- a/public/app/views/pages/management/guestreg.html
+++ b/public/app/views/pages/management/guestreg.html
@@ -49,6 +49,18 @@
                 ng-model="register.regData.otherinfo" id="otherinfo">
         </div>
 
+        <div class="field">
+            <label class="ui black label">Debit/Credit Card Number</label>
+            <input ng-disabled="register.disabled" placeholder="1234 5678 1234 5678" type="text" name="cc" 
+            ng-model="register.regData.cc" id="cc">
+        </div>
+
+        <div class="field">
+            <label class="ui black label">Billing Address</label>
+            <input ng-disabled="register.disabled" placeholder="Main Street, Dublin 1, Dublin" type="text" name="address" 
+            ng-model="register.regData.cc" id="address">
+        </div>
+
 
 
 
