--- a/public/app/views/pages/management/management.html
+++ b/public/app/views/pages/management/management.html
@@ -1,12 +1,25 @@
 <div class="ui inverted segment">
     <h1>Admin Corner</h1>
-    <div class="ui form">
+    <div class="ui two column middle stackable grid">
+      <div class="ui form">
+              <p>
+                  <a href="/guestreg">
+                      <button class="ui huge primary button">Register a Guest for an Event</button> 
+                  </a>
+              </p>
+          </div>
+          <div class="ui form">
             <p>
-                <a href="/guestreg">
-                    <button class="ui huge primary button">Register a Guest for an Event</button> 
+                <a href="/donationStats">
+                    <button class="ui huge primary button">Donation Stats</button> 
                 </a>
             </p>
         </div>
+        </div>
+
+
+    <br>
+    <br>
     <div class="ui form">
         <div class="required nine wide field">
             <div class="ui action input">
