--- a/public/app/views/pages/management/edit.html
+++ b/public/app/views/pages/management/edit.html
@@ -83,8 +83,8 @@
             type: 'minLength[4]',
             prompt: 'Name must be more than 4 charecters'
           },{
-            type: 'maxLength[40]',
-            prompt: 'Name must be less than 40 charecters'
+            type: 'maxLength[50]',
+            prompt: 'Name must be less than 50 charecters'
           },{
             type: 'regExp',
             value: /^(([a-zA-Z]{2,20})+[ ]+([a-zA-Z-]{2,20})*)+$/,
@@ -115,10 +115,10 @@
             prompt: 'Please enter a valid email'
           },{
             type: 'minLength[3]',
-            prompt: 'Name must be more than 3 charecters'
+            prompt: 'Email must be more than 3 charecters'
           },{
-            type: 'maxLength[25]',
-            prompt: 'Name must be less than 25 charecters'
+            type: 'maxLength[60]',
+            prompt: 'Email must be less than 60 charecters'
           }]
         }
       }, {
@@ -146,7 +146,7 @@
             prompt: 'Name must be more than 3 charecters'
           },{
             type: 'maxLength[40]',
-            prompt: 'Name must be less than 40 charecters'
+            prompt: 'Name must be less than 25 charecters'
           }]
         }
       }, {
