--- a/public/app/views/pages/management/donationStats.html
+++ b/public/app/views/pages/management/donationStats.html
@@ -10,7 +10,7 @@
     <p style="font-size:20px">{{ viewDonations.totalDonations }}</p>
 
     <h2 class="ui inverted header">Most Generous Donors</h2>
-    <table id="example" class="ui sortable celled inverted primary table" cellspacing="0" width="100%">
+    <table id="example" class="ui celled inverted primary table" cellspacing="0" width="100%">
         <thead>
         <tr>
             <th>Amount Donated</th>
