--- a/public/app/views/pages/management/donationStats.html
+++ b/public/app/views/pages/management/donationStats.html
@@ -27,7 +27,7 @@
         </tbody>   
     </table>
     <h2 class="ui inverted header">Most Frequent Donors</h2>
-    <table id="example" class="ui sortable celled inverted primary table" cellspacing="0" width="100%">
+    <table id="example" class="ui celled inverted primary table" cellspacing="0" width="100%">
         <thead>
         <tr>
             <th>Number Of Donations</th> 
