mailList list view added + stuff

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -38,11 +38,13 @@
   <script src="app/controllers/editCtrl.js"></script>
   <script src="app/controllers/managementCtrl.js"></script>
   <script src="app/controllers/eventCtrl.js"></script>
+  <script src="app/controllers/mailListCtrl.js"></script>
 
   <!-- Angular Services -->
   <script src="app/services/userServices.js"></script>
   <script src="app/services/authServices.js"></script>
   <script src="app/services/eventServices.js"></script>
+  <script src="app/services/mailListServices.js"></script>
 
   <!--   CSS for days - Move me or organise it into master -->
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
