Mail Lists accesible from management screen + create email screen

--- a/public/app/views/pages/management/management.html
+++ b/public/app/views/pages/management/management.html
@@ -15,6 +15,13 @@
                 </a>
             </p>
         </div>
+        <div class="ui form">
+            <p>
+                <a href="/mailLists">
+                    <button class="ui huge primary button">Mailing Lists</button> 
+                </a>
+            </p>
+        </div>
         </div>
 
 
