--- a/public/assets/css/liveTracker.css
+++ b/public/assets/css/liveTracker.css
@@ -10,7 +10,7 @@ body {
 #countdown-wrap {
   width: 100%;
   height: 300px;
-  //border: 1px solid black;
+  /* //border: 1px solid black; */
   padding: 20px;
   font-family: arial;
   max-width: 650px;
@@ -21,10 +21,10 @@ body {
   font-size: 48px;
   text-align: right;
   color: #FFF;
-  @media only screen and (max-width : 640px) {
-    text-align: center;  
-  }
-  
+}
+
+@media only screen and (max-width : 640px) {
+  text-align: center;  
 }
 
 #glass {
@@ -42,21 +42,16 @@ body {
   height: 20px;
   background: #FF5D50;
   z-index: 333;
-  //border-radius: 5px;
+  /* //border-radius: 5px; */
 }
 
 .goal-stat {
   width: 25%;
-  //height: 30px;
+  /* //height: 30px; */
   padding: 10px;
   float: left;
   margin: 0;
   color: #FFF;
-  
-  @media only screen and (max-width : 640px) {
-    width: 50%;
-    text-align: center;
-  }
 }
 
 .goal-number, .goal-label {
