Added ability to delete events

--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -56,7 +56,7 @@
                             View
                         </button>
                     </a>
-                    <button ng-show="main.admin" button class="ui negative basic button right floated">
+                    <button ng-show="main.admin" button class="ui negative basic button right floated" ng-click="manage.deleteEvent(event.eventId)">
                         Delete
                     </button>
                 </td>
