--- a/public/app/views/pages/events/eventLiveTracker.html
+++ b/public/app/views/pages/events/eventLiveTracker.html
@@ -2,7 +2,7 @@
 
 <div class="ui inverted segment">
     <h1>Live Donation Tracker</h1>
-
+    <h2>{{eventLiveTracker.name}}</h2>
     <div id=countdown-wrap>
         <div id="goal">${{eventLiveTracker.goal}}</div>
         <div id="glass">
