--- a/public/app/views/pages/emails/createEmail.html
+++ b/public/app/views/pages/emails/createEmail.html
@@ -32,8 +32,8 @@
                 <button ng-click="createEmail.setSelect('lists')" type="button" class="ui button">Mailing Lists</button>
             </div>
             <br>
-            <select ng-disabled="createEmail.disabled" class="ui fluid search dropdown" ng-model="createEmail.emailData.to" ng-options="event.name for event in createEmail.events">
-                <option value="">Mailing List</option>
+            <select ng-disabled="createEmail.disabled" class="ui fluid search dropdown" ng-model="createEmail.emailData.to" ng-options="event.name for event in createEmail.events; ">
+                <option value="">Event</option>
             </select>
         </div>
 
