--- a/public/app/views/pages/about.html
+++ b/public/app/views/pages/about.html
@@ -1,4 +1,34 @@
 <br>
-<div class="ui text">
-	<h1 class="ui inverted header">Hello {{ main.username }} from About Route</h1>
+<div class="ui inverted segment">
+	<h2 class="ui inverted header">About Us</h2>
+
+	<div class="ui top attached segment header inverted"><i class="star icon"></i>Mission statement</div>
+	<div class="ui raised bottom attached segment">
+		Outreach Moldova is dedicated to providing human rights, medical care and social inclusion for children that have been abandoned or orphaned, children with special needs and children with terminal illnesses in the Republic of Moldova.
+	</div>
+
+	<div class="ui top attached segment header inverted"><i class="heart icon"></i>Core Values</div>
+	<div class="ui raised bottom attached segment">
+			Collaboration and Cooperation with those who share common goals<br>
+			Organsiation and Openness to provide for those in need<br>
+			Respect for human dignity<br>
+			Enhance quality of life through appropriate care<br>
+			<br>
+			Value the input of those who want to help and hear all voices<br>
+			Assist wherever possible and advocate human rights<br>
+			Learn from those around us<br>
+			Understand that no one person can make a change, it takes an entire community<br>
+			Enable those whom circumstance has managed to disable<br>
+			Strive for sustainability
+	</div>
+	
+	<div class="ui top attached segment header inverted"><i class="check icon"></i>Goals</div>
+	<div class="ui raised bottom attached segment">
+			The goal of ORM is to provide immediate and ongoing assistance where necessary, provide the necessary training and supervision required, assist in and develop long-term, self-sustaining programs that will have a positive and lasting impact in the lives of these needy children and their care givers. We also strive to provide for the communities working with these children.
+	</div>
+
+	<div class="ui top attached segment header inverted"><i class="eye icon"></i>Vision</div>
+	<div class="ui raised bottom attached segment">
+			ORM’s vision is that each person who is physically, mentally or socially disadvantaged deserves to be given special treatment, education and appropriate care required by their particular condition regardless of circumstance.
+	</div>
 </div>
