--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -26,7 +26,8 @@
             </tbody>
         </table>
         <br>
-    
+    <a class="ui primary button" href='/seating/{{viewEvent.id}}'>Seating Plan</a>
+
         
     <h2 class="ui header">Guest/Invite List</h2>
     <div class="ui two column middle stackable grid">
